--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server",
+    "dev": "supervisor –harmony server",
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.5",
     "express": "^4.16.3",
     "vue": "^2.5.17",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.17",
     "vue-template-compiler": "^2.5.17",
@@ -26,14 +28,22 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "chokidar": "^2.0.4",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "memory-fs": "^0.4.1",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "supervisor": "^0.12.0",
+    "url-loader": "^1.1.2",
     "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.3.0",
