--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-dist/
-node_modules/
-.log
-.vscode/
+.DS_Store
+/node_modules
+/dist
+dist.tar
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
