--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.20.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "express": "^4.16.3",
+    "serve-favicon": "^2.5.0",
     "vue": "^2.6.12",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.0.1",
@@ -34,11 +37,14 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "chokidar": "^2.0.4",
+    "compression-webpack-plugin": "^3.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "memory-fs": "^0.4.1",
+    "mini-css-extract-plugin": "^1.2.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -51,6 +57,7 @@
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
     "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "webpackbar": "^4.0.0"
   }
 }
