--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "memory-fs": "^0.4.1",
     "mini-css-extract-plugin": "^1.2.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
